Generalise 0x200 flag bit as filtered-out bit
Quoting Heng Li, "almost no one uses failedVendorQualityChecks nowadays",
instead omitting such reads entirely.  Repurpose this flag as a general
this-alignment-is-filtered-out flag.  Fixes #85 (see discussion there).

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -296,7 +296,7 @@ Each bit is explained in the following table:
    64 &   0x40 & the first segment in the template \\
   128 &   0x80 & the last segment in the template \\
   256 &  0x100 & secondary alignment \\
-  512 &  0x200 & not passing quality controls \\
+  512 &  0x200 & not passing filters, such as platform/vendor quality controls \\
  1024 &  0x400 & PCR or optical duplicate \\
  2048 &  0x800 & supplementary alignment \\
   \hline
