--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -1332,7 +1332,7 @@ reference to their dictionary values.  For example, the following VCF record:
 20 10228 rs143255646 TA T . PASS ASP;RSPOS=10229;dbSNPBuildID=134
 \end{verbatim}
 \normalsize
-would be encoded inline in BCF2 by reference to the relative position of the header line in the header (ASP=1, RSPOS=2, dbSNPBuildID=3, and PASS implicitly encoded in the last offset PASS=4)
+would be encoded inline in BCF2 by reference to the relative position of the header line in the header (ASP=1, RSPOS=2, dbSNPBuildID=3, and PASS implicitly encoded in the {\color{red}first offset PASS=0}).
 
 \small
 \begin{verbatim}
@@ -1732,7 +1732,7 @@ Just for discussion, suppose instead that ALT was ALT=C,T.  The only thing that 
 
 \subsubsection{Encoding FILTER}
 
-``PASS'' is implicitly encoded as the last entry in the header dictionary (see dictionary of strings).  Here we encode the PASS FILTER field as a vector of size 1 of type 8-bit, which has type byte is 0x11.  The value is the offset 0:
+``PASS'' is implicitly encoded as the {\color{red}first} entry in the header dictionary (see dictionary of strings).  Here we encode the PASS FILTER field as a vector of size 1 of type 8-bit, which has type byte is 0x11.  The value is the offset 0:
 
 \vspace{0.3cm}
 \begin{tabular}{|l| l|} \hline
@@ -1900,6 +1900,7 @@ with "$<$" must have an ID field. Therefore, also \#\#PEDIGREE newly requires a 
 \item We introduce end-of-vector byte and reserve 8 values for future use
 \item Clarified that except the end-of-vector byte, no other negative values are allowed in the GT array 
 \item String vectors in BCF do not need to start with comma, as the number of values is indicated already in the definition of the tag in the header.
+\item The implicit filter PASS was described inconsistently throughout BCFv2.1: It is encoded as the first entry in the dictionary, not the last.
 \end{itemize}
 }
 
