--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -12,7 +12,7 @@
 }
 
 \usepackage{color}
-\renewcommand{\thefootnote}{\color{red}\fnsymbol{footnote}}
+\renewcommand{\thefootnote}{\fnsymbol{footnote}}
 
 \begin{document}
 \input{VCFv4.3.ver}
@@ -33,15 +33,14 @@ last modified on the date shown above.
 
 \section{The VCF specification}
 VCF is a text file format (most likely stored in a compressed manner). 
-It contains meta-information lines {\color{red}(prefixed with "\#\#")}, a header
-line {\color{red}(prefixed with "\#")}, and data lines
+It contains meta-information lines (prefixed with "\#\#"), a header
+line (prefixed with "\#"), and data lines
 each containing information about a position in the genome and genotype
 information on samples for each position
-{\color{red}(text fields separated by tabs). Zero length fields are not allowed, a dot (".") should
+(text fields separated by tabs). Zero length fields are not allowed, a dot (".") should
 be used instead.
 In order to ensure interoperability across platforms, VCF compliant implementations must support
 both LF (\texttt{\textbackslash n}) and CR+LF (\texttt{\textbackslash r\textbackslash n}) newline conventions.  
-}
 
 \subsection{An example}
 \scriptsize
@@ -74,7 +73,6 @@ both LF (\texttt{\textbackslash n}) and CR+LF (\texttt{\textbackslash r\textback
 \normalsize
 This example shows (in order): a good simple SNP, a possible SNP that has been filtered out because its quality is below 10, a site at which two alternate alleles are called, with one of them (T) being ancestral (possibly a reference sequencing error), a site that is called monomorphic reference (i.e. with no alternate alleles), and a microsatellite with two alternative alleles, one a deletion of 2 bases (TC), and the other an insertion of one base (T). Genotype data are given for three samples, two of which are phased and the third unphased, with per sample genotype quality, depth and haplotype qualities (the latter only for the phased samples) given as well as the genotypes. The microsatellite calls are unphased.
 
-{\color{red}
 \subsection{Character encoding, non-printable characters and characters with special meaning}
 \label{character-encoding}
 The character encoding of VCF files is UTF-8.  UTF-8 is a multi-byte 
@@ -106,13 +104,13 @@ or ':' FORMAT fields) must be represented using the capitalized percent encoding
 Data types supported by VCF are: Integer (32-bit, signed), Float (32-bit, formatted 
 to match the regular expression \texttt{\^{}[-+]?[0-9]*\textbackslash.?[0-9]+([eE][-+]?[0-9]+)?\$}, \texttt{NaN}, or \texttt{+/-Inf}), Flag, Character, and
 String. For the Integer type, the values from $-2^{31}$ to $-2^{31}+7$ cannot be stored in the binary version, see \ref{BcfTypeEncoding}.
-}
+
 \subsection{Meta-information lines}
 
 
 File meta-information is included after the \#\# string and must be key=value
 pairs. Meta-information lines are optional, but if they are present then
-they must be completely well-formed. {\color{red} Note that BCF, the binary
+they must be completely well-formed. Note that BCF, the binary
 counterpart of VCF, requires that all entries are present.  It is strongly
 encouraged to include meta-information lines describing the entries used in the
 body of the VCF file.
@@ -132,7 +130,7 @@ the file.  These tags are based on the SQ field from the SAM spec; all tags are
 optional (see the VCF example above).
 
 Meta-information lines can be in any order with the exception of `fileformat`
-which must come first.}
+which must come first.
 
 
 \subsubsection{File format}
@@ -213,14 +211,12 @@ The CNV category should not be used when a more specific category can be applied
 
 \bigskip
 
-{\color{red}
 \noindent \textbf{IUPAC ambiguity codes} \newline
 Symbolic alleles can be used also to represent genuinely ambiguous data in VCF, for example:
 \begin{verbatim}
     ##ALT=<ID=R,Description="IUPAC code R = A/G">
     ##ALT=<ID=M,Description="IUPAC code M = A/C">
 \end{verbatim}
-}
 
 
 \subsubsection{Assembly field format}
@@ -243,16 +239,14 @@ found, etc. For example:
 \end{verbatim}
 
 \noindent
-{\color{red}Valid contig names must follow the reference sequence names allowed by the SAM format
+Valid contig names must follow the reference sequence names allowed by the SAM format
 ("{\tt [!-)+-\char60\char62-\char126][!-\char126]*}") excluding the characters "\texttt{\textless\textgreater[]:*}" to avoid clashes with
 symbolic alleles and breakend notation.  The contig names must not use a reserved symbolic allele name.
-}
 
 
 \subsubsection{Sample field format}
 It is possible to define sample to genome mappings as shown below:
-{\color{red}
-\scriptsize
+{\scriptsize
 \begin{verbatim}
 ##META=<ID=Assay,Type=String,Number=.,Values=[WholeGenome, Exome]>
 ##META=<ID=Disease,Type=String,Number=.,Values=[None, Cancer]>
@@ -260,27 +254,22 @@ It is possible to define sample to genome mappings as shown below:
 ##META=<ID=Tissue,Type=String,Number=.,Values=[Blood, Breast, Colon, Lung, ?]>
 ##SAMPLE=<ID=Sample1,Assay=WholeGenome,Ethnicity=AFR,Disease=None,Description="Patient germline genome from unaffected",DOI=url>
 ##SAMPLE=<ID=Sample2,Assay=Exome,Ethnicity=CEU,Disease=Cancer,Tissue=Breast,Description="European patient exome from breast cancer">
-\end{verbatim}
-}
+\end{verbatim}}
 
 \subsubsection{Pedigree field format}
 It is possible to record relationships between genomes using the following syntax:
-{\color{red}
 \begin{verbatim}
 ##PEDIGREE=<ID=TumourSample,Original=GermlineID>
 ##PEDIGREE=<ID=SomaticNonTumour,Original=GermlineID>
 ##PEDIGREE=<ID=ChildID,Father=FatherID,Mother=MotherID>
 ##PEDIGREE=<ID=SampleID,Name_1=Ancestor_1,...,Name_N=Ancestor_N>
 \end{verbatim}
-}
 \noindent or a link to a database:
-{\color{red}
 \begin{verbatim}
 ##pedigreeDB=URL
 \end{verbatim}
 
 \noindent See \ref{PedigreeInDetail} for details.
-}
 
 
 \subsection{Header line syntax}
@@ -298,18 +287,18 @@ The header line names the 8 fixed, mandatory columns. These columns are as follo
 \end{enumerate}
 
 If genotype data is present in the file, these are followed by a FORMAT column header, then an arbitrary number of sample IDs. The header line is tab-delimited
-{\color{red} and there must be no tab characters at the end of the line}.
+and there must be no tab characters at the end of the line.
 
 \subsection{Data lines}
 \subsubsection{Fixed fields}
 There are 8 fixed fields per record. All data lines are tab-delimited
-{\color{red} with no tab character at the end of the line. The last data line should end with a line separator.} In all cases,
+with no tab character at the end of the line. The last data line should end with a line separator. In all cases,
 missing values are specified with a dot (`.'). Fixed fields are:
 
 \begin{enumerate}
   \item CHROM - chromosome: An identifier from the reference genome or an angle-bracketed ID String (``$<$ID$>$'') pointing to a contig in the assembly file (cf. the \#\#assembly line in the header). All entries for a specific CHROM should form a contiguous block within the VCF file. The colon symbol (:) must be absent from all chromosome names to avoid parsing errors when dealing with breakends. (String, no white-space permitted, Required).
   \item POS - position: The reference position, with the 1st base having position 1. Positions are sorted numerically, in increasing order, within each reference sequence CHROM.   It is permitted to have multiple records with the same POS. Telomeres are indicated by using positions 0 or N+1, where N is the length of the corresponding chromosome or contig.   (Integer, Required)
-  \item ID - identifier: Semi-colon separated list of unique identifiers where available. If this is a dbSNP variant it is encouraged to use the rs number(s). No identifier should be present in more than one data record. If there is no identifier available, then the missing value should be used. (String, no white-space or semi-colons permitted, {\color{red}duplicate values not allowed.})
+  \item ID - identifier: Semi-colon separated list of unique identifiers where available. If this is a dbSNP variant it is encouraged to use the rs number(s). No identifier should be present in more than one data record. If there is no identifier available, then the missing value should be used. (String, no white-space or semi-colons permitted, duplicate values not allowed.)
   \item REF - reference base(s): Each base must be one of A,C,G,T,N (case
   insensitive). Multiple bases are permitted. The value in the POS field refers
   to the position of the first base in the String. For simple insertions and
@@ -325,28 +314,26 @@ missing values are specified with a dot (`.'). Fixed fields are:
   polymorphism. Tools processing VCF files are not required to preserve case in
   the allele Strings. (String, Required).
 
-  {\color{red}
   If the reference sequence contains IUPAC ambiguity codes not
   allowed by this specification (such as R = A/G), the ambiguous reference base 
   must be reduced to a concrete base by using the one that is first alphabetically
   (thus R as a reference base is converted to A in VCF.)
-  }
 
 
-  \item ALT - alternate base(s): Comma separated list of alternate non-reference alleles called on at least one of the samples. Options are base Strings made up of the bases A,C,G,T,N,*, (case insensitive) or an angle-bracketed ID String (``$<$ID$>$'') or a breakend replacement string as described in the section on breakends. The `*' allele is reserved to indicate that the allele is {\color{red}missing due to a an overlapping deletion}. If there are no alternative alleles, then the missing value should be used.  Tools processing VCF files are not required to preserve case in the allele String, except for IDs, which are case sensitive.  (String; no whitespace, commas, or angle-brackets are permitted in the ID String itself)
+  \item ALT - alternate base(s): Comma separated list of alternate non-reference alleles called on at least one of the samples. Options are base Strings made up of the bases A,C,G,T,N,*, (case insensitive) or an angle-bracketed ID String (``$<$ID$>$'') or a breakend replacement string as described in the section on breakends. The `*' allele is reserved to indicate that the allele is missing due to a an overlapping deletion. If there are no alternative alleles, then the missing value should be used.  Tools processing VCF files are not required to preserve case in the allele String, except for IDs, which are case sensitive.  (String; no whitespace, commas, or angle-brackets are permitted in the ID String itself)
   \item QUAL - quality: Phred-scaled quality score for the assertion made in ALT. i.e. $-10log_{10}$ prob(call in ALT is wrong). If ALT is `.' (no variant) then this is $-10log_{10}$ prob(variant), and if ALT is not `.' this is $-10log_{10}$ prob(no variant). If unknown, the missing value should be specified. (Float)
-  \item FILTER - filter status: PASS if this position has passed all filters, i.e. a call is made at this position. Otherwise, if the site has not passed all filters, a semicolon-separated list of codes for filters that fail. e.g. ``q10;s50'' might indicate that at this site the quality is below 10 and the number of samples with data is below 50\% of the total number of samples. `0' is reserved and should not be used as a filter String. If filters have not been applied, then this field should be set to the missing value. (String, no white-space or semi-colons permitted, {\color{red}duplicate values not allowed.})
+  \item FILTER - filter status: PASS if this position has passed all filters, i.e. a call is made at this position. Otherwise, if the site has not passed all filters, a semicolon-separated list of codes for filters that fail. e.g. ``q10;s50'' might indicate that at this site the quality is below 10 and the number of samples with data is below 50\% of the total number of samples. `0' is reserved and should not be used as a filter String. If filters have not been applied, then this field should be set to the missing value. (String, no white-space or semi-colons permitted, duplicate values not allowed.)
   \item INFO - additional information: (String, no semi-colons or
   equals-signs permitted; commas are permitted only as delimiters for lists of
   values; characters with special meaning can be encoded using the percent encoding, see Section~\ref{character-encoding}; space characters are allowed)
   INFO fields are encoded as a semicolon-separated series of short keys
   with optional values in the format: $<$key$>$=$<$data$>$[,data]. 
-  {\color{red} INFO keys must match the regular expression \texttt{\^{}[A-Za-z\_][0-9A-Za-z\_.]*\$}, duplicate fields are not allowed.}
+  INFO keys must match the regular expression \texttt{\^{}[A-Za-z\_][0-9A-Za-z\_.]*\$}, duplicate fields are not allowed.
   Arbitrary keys are permitted, although the following sub-fields are reserved (albeit optional):
 \begin{itemize}
   \item AA : ancestral allele
   \item AC : allele count in genotypes, for each ALT allele, in the same order as listed
-  \item {\color{red}AD, ADF, ADR: read depths for each allele; total (AD), on the forward (ADF) and the reverse (ADR) strand (Integer, Number=R)}
+  \item AD, ADF, ADR: read depths for each allele; total (AD), on the forward (ADF) and the reverse (ADR) strand (Integer, Number=R)
   \item AF : allele frequency for each ALT allele in the same order as listed: use this when estimated from primary data, not called genotypes
   \item AN : total number of alleles in called genotypes
   \item BQ : RMS base quality at this position
@@ -371,7 +358,7 @@ Example for an INFO field: DP=154;MQ=52;H2. Keys without corresponding values ar
 \subsubsection{Genotype fields}
 If genotype information is present, then the same types of data must be present
 for all samples. First a FORMAT field is given specifying the data types and
-order ({\color{red} colon-separated FORMAT ids matching the regular expression \texttt{\^{}[A-Za-z\_][0-9A-Za-z\_.]*\$}, duplicate fields are not allowed}). This is followed by one data block per
+order (colon-separated FORMAT ids matching the regular expression \texttt{\^{}[A-Za-z\_][0-9A-Za-z\_.]*\$}, duplicate fields are not allowed). This is followed by one data block per
 sample, with the colon-separated data corresponding to the types
 specified in the format. The first sub-field must always be the genotype (GT)
 if it is present.  There are no required sub-fields.
@@ -380,12 +367,12 @@ As with the INFO field, there are several common, reserved keywords that are sta
 
 \begin{itemize}
 \renewcommand{\labelitemii}{$\circ$}
-  \item {\color{red}AD, ADF, ADR: per-sample read depths for each allele; total (AD), on the forward (ADF) and the reverse (ADR) strand (Integer, Number=R)}
+  \item AD, ADF, ADR: per-sample read depths for each allele; total (AD), on the forward (ADF) and the reverse (ADR) strand (Integer, Number=R)
   \item DP : read depth at this position for this sample (Integer)
   \item EC : comma separated list of expected alternate allele counts for each alternate allele in the same order as listed in the ALT field (typically used in association analyses) (Integers)
   \item FT : sample genotype filter indicating if this genotype was ``called'' (similar in concept to the FILTER field). Again, use PASS to indicate that all filters have been passed, a semi-colon separated list of codes for filters that fail, or `.' to indicate that filters have not been applied. These values should be described in the meta-information in the same way as FILTERs (String, no white-space or semi-colons permitted)
   \item GQ : conditional genotype quality, encoded as a phred quality $-10log_{10}$ p(genotype call is wrong, conditioned on the site's being variant) (Integer)
-  \item GP : {\color{red} genotype posterior probabilities in the range 0 to 1 using the same ordering as the GL field; one use can be to store imputed genotype probabilities (Float)}
+  \item GP : genotype posterior probabilities in the range 0 to 1 using the same ordering as the GL field; one use can be to store imputed genotype probabilities (Float)
   \item GT : genotype, encoded as allele values separated by either of $/$ or $\mid$. The allele values are 0 for the reference allele (what is in the REF field), 1 for the first allele listed in ALT, 2 for the second allele list in ALT and so on. For diploid calls examples could be $0/1$, $1\mid0$, or $1/2$, etc. For haploid calls, e.g. on Y, male non-pseudoautosomal X, or mitochondrion, only one allele value should be given; a triploid call might look like $0/0/1$. If a call cannot be made for a sample at a given locus, `.' should be specified for each missing allele in the GT field (for example `$./.$' for a diploid genotype and `.' for haploid genotype). The meanings of the separators are as follows (see the PS field below for more details on incorporating phasing information into the genotypes):
 	\begin{itemize}
 	  \item $/$ : genotype unphased
@@ -394,13 +381,12 @@ As with the INFO field, there are several common, reserved keywords that are sta
 
   \item GL : genotype likelihoods comprised of comma separated floating point
   $log_{10}$-scaled likelihoods for all possible genotypes given the set of
-  alleles defined in the REF and ALT fields. {\color{red} In presence of the GT field the
+  alleles defined in the REF and ALT fields. In presence of the GT field the
   same ploidy is expected; without GT field, diploidy is assumed. 
 
   \textsc{Genotype Ordering.} In general case of ploidy P and N alternate alleles (0 is the REF and 1..N
   the alternate alleles), the ordering of genotypes for the likelihoods can
-  be expressed by the following pseudocode with as many nested loops as ploidy:\footnote{\color{red}Note 
-    that we use inclusive \texttt{for} loop boundaries.}
+  be expressed by the following pseudocode with as many nested loops as ploidy:\footnote{Note that we use inclusive \texttt{for} loop boundaries.}
   \begingroup
   \small
   \begin{lstlisting}
@@ -450,7 +436,6 @@ As with the INFO field, there are several common, reserved keywords that are sta
             \end{tabular}
             }
     \end{itemize}
-  }
 
   \item HQ : haplotype qualities, two comma separated phred qualities (Integers)
   \item MQ : RMS mapping quality, similar to the version in the INFO field. (Integer)
@@ -474,7 +459,6 @@ VCF records use a single general system for representing genetic variation data 
 \end{itemize}
 VCF records use a simple haplotype representation for REF and ALT alleles to describe variant haplotypes at a locus. ALT haplotypes are constructed from the REF haplotype by taking the REF allele bases at the POS in the reference genotype and replacing them with the ALT bases. In essence, the VCF record specifies a-REF-t and the alternative haplotypes are a-ALT-t for each alternative allele.
 
-{\color{red}
 \subsection{VCF tag naming conventions}
 \begin{itemize}
     \item The "L" suffix means "likelihood" as log-likelihood in the sampling
@@ -491,7 +475,6 @@ VCF records use a simple haplotype representation for REF and ALT alleles to des
     site-level QUAL field follows the same convention (represented as a
     phred-scaled number).
 \end{itemize}
-}
 
 
 \section{INFO keys used for structural variants}
@@ -566,9 +549,9 @@ alternate alleles or because the haplotypes cannot be determined). CN specifies
 the integer copy number of the variant in this sample. CNQ is encoded as a
 phred quality $-10log_{10}$ p(copy number genotype call is wrong). CNL
 specifies a list of $log_{10}$ likelihoods for each potential copy number,
-starting from zero. {\color{red} CNP is 0 to 1-scaled copy number posterior
+starting from zero. CNP is 0 to 1-scaled copy number posterior
 probabilities (and otherwise defined precisely as the CNL field), intended to
-store imputed genotype probabilities.} When possible, GT/GQ/GL/GP should be used
+store imputed genotype probabilities. When possible, GT/GQ/GL/GP should be used
 instead of (or in addition to) these keys.
 
 \section{Representing variation in VCF records}
@@ -1142,19 +1125,15 @@ Analogously, there might also be several normal genomes from the same patient in
 
 The general format of a PEDIGREE line describing asexual, clonal derivation is:
 
-{\color{red}
 \begin{verbatim}
 PEDIGREE=<ID=DerivedID,Original=OriginalID>
 \end{verbatim}
-}
 
 This line asserts that the DNA in genome is asexually or clonally derived with mutations from the DNA in genome. This is the asexual analog of the VCF format that has been proposed for family relationships between genomes, i.e. there is one entry per of the form:
 
-{\color{red}
 \begin{verbatim}
 PEDIGREE=<ID=ChildID,Mother=MotherID,Father=FatherID>
 \end{verbatim}
-}
 
 Let's consider a cancer patient VCF file with 4 genomes: germline, primary\_tumor, secondary\_tumor1, and secondary\_tumor2 as illustrated in Figure 10. The primary\_tumor is derived from the germline and the secondary tumors are each derived independently from the primary tumor, in all cases by clonal derivation with mutations. The PEDIGREE lines would look like:
 
@@ -1164,13 +1143,11 @@ Let's consider a cancer patient VCF file with 4 genomes: germline, primary\_tumo
 \caption{Pegigree example}
 \end{figure}
 
-{\color{red}
 \begin{verbatim}
 ##PEDIGREE=<ID=PrimaryTumorID,Original=GermlineID>
 ##PEDIGREE=<ID=Secondary1TumorID,Original=PrimaryTumorID>
 ##PEDIGREE=<ID=Secondary2TumorID,Original=PrimaryTumorID>
 \end{verbatim}
-}
 
 Alternately, if data on the genomes is compiled in a database, a simple pointer can be provided:
 
@@ -1180,11 +1157,9 @@ Alternately, if data on the genomes is compiled in a database, a simple pointer 
 
 The most general form of a pedigree line is:
 
-{\color{red}
 \begin{verbatim}
 ##PEDIGREE=<ID=SampleID,Name_1=Ancestor1,...,Name_N=AncestorN>
 \end{verbatim}
-}
 
 This means that the genome SampleID is derived from the N $\ge$ 1 genomes Ancestor1, ..., AncestorN. Based on these derivation relationships two new pieces of information can be specified.
 
@@ -1235,7 +1210,6 @@ Bundle Copy Number & 1 & 3 & 1 \\
 Haplotype quality & 30 & 40 & 40 \\
 \end{tabular}
 
-{\color{red}
 \subsection{Representing unspecified alleles and REF-only blocks (gVCF)}
 In order to report sequencing data evidence for both variant and non-variant
 positions in the genome, the VCF specification allows to represent blocks of reference-only calls in a single record
@@ -1260,7 +1234,6 @@ Example records are given below:
 \end{tabular}
 \end{flushleft}
 \normalsize
-}
 
 \pagebreak
 \section{BCF specification}
@@ -1332,7 +1305,7 @@ reference to their dictionary values.  For example, the following VCF record:
 20 10228 rs143255646 TA T . PASS ASP;RSPOS=10229;dbSNPBuildID=134
 \end{verbatim}
 \normalsize
-would be encoded inline in BCF2 by reference to the relative position of the header line in the header (ASP=1, RSPOS=2, dbSNPBuildID=3, and PASS implicitly encoded in the {\color{red}first offset PASS=0}).
+would be encoded inline in BCF2 by reference to the relative position of the header line in the header (ASP=1, RSPOS=2, dbSNPBuildID=3, and PASS implicitly encoded in the first offset PASS=0).
 
 \small
 \begin{verbatim}
@@ -1346,7 +1319,6 @@ would be encoded inline in BCF2 by reference to the relative position of the hea
 \end{verbatim}
 \normalsize
 
-{\color{red}
 Defined this way, the dictionary of strings depends on the order and the
 presence of all preceding header lines. If an existing tag needs to be removed
 from a BCF, also all consequent tags throughout the whole BCF would have to be
@@ -1356,7 +1328,6 @@ not present, the implicit relative position is assumed. If the IDX field is
 present in one record, it must be present also in all other dictionary-defining
 records. The IDX tag is not necessary in newly created BCF files, but if
 present, the numbering must match the implicit dictionary of tags.
-}
 
 Note that the dictionary encoding has the magic prefix `s' here to indicate that the field's value is actually in the dictionary entry giving by the subsequent offset.  This representation isn't actually the one used in BCF2 records but it provides a clean visual guide for the above example.  Note also how the contig has been recoded as a offset into the list of contig declarations.
 
@@ -1489,12 +1460,11 @@ Note this is not used in BCF2, but its type is reserved in case this becomes nec
 \textbf{Integers} may be encoded as 8, 16, or 32 bit values, in little-endian
 order.  It is up to the encoder to determine the appropriate ranged value to
 use when writing the BCF2 file. 
-{\color{red}
 For integer types, the values 0x80, 0x8000, 0x80000000 are interpreted as
 missing values and 0x81, 0x8001, 0x80000001 as end-of-vector indicators
 (for 8, 16, and 32 bit values, respectively). Note that the end-of-vector byte
 is not part of the vector itself and only end-of-vector bytes can follow.
-In total, eight values are reserved for future use: 0x80-0x87, 0x8000-0x8007, 0x80000000-0x80000007. }
+In total, eight values are reserved for future use: 0x80-0x87, 0x8000-0x8007, 0x80000000-0x80000007.
 
 
 \vspace{0.3cm}
@@ -1520,12 +1490,10 @@ signaling NaN.
 \noindent A good way to understand these values is to play around with the IEEE encoder webiste.
 
 \vspace{0.3cm}
-{\color{red}
 \noindent Similarly to integers, the float value of 0x7F800001 is interpreted as a missing value
 and 0x7F800002 as the end-of-vector indicator. Note that the end-of-vector byte
 is not part of the vector itself and only end-of-vector bytes can follow. In total,
 eight values are reservd for future use:
-}
 
 \vspace{0.1cm}
 \begin{tabular}{| l | c | l |} \hline
@@ -1539,7 +1507,7 @@ reserved & 0b0111 1111 1000 0000 0000 0000 0000 0111 & 0x7F800007 \\ \hline
 \end{tabular}
 
 \vspace{0.3cm}
-\textbf{Character} values are not explicitly typed in BCF2.  Instead, VCF Character values should be encoded by a single character string. {\color{red} See also \ref{character-encoding}.}
+\textbf{Character} values are not explicitly typed in BCF2.  Instead, VCF Character values should be encoded by a single character string. See also \ref{character-encoding}.
 
 \vspace{0.3cm}
 \textbf{Flags} values -- which can only appear in INFO fields -- in BCF2 should be encoded by any non-MISSING value.  The recommended best practice is to encode the value as an 1-element INT8 (type 0x11) with value of 1 to indicate present.  Because FLAG values can only be encoded in INFO fields, BCF2 provides no mechanism to encode FLAG values in genotypes, but could be easily extended to do so if allowed in a future VCF version.
@@ -1632,11 +1600,9 @@ A \textbf{Genotype (GT) field} is encoded in a typed integer vector (can be 8,
 maximum ploidy among all samples at a site.  For one individual, each integer
 in the vector is organized as $(allele+1) << 1 \mid phased$ where allele is set
 to -1 if the allele in GT is a dot `.' (thus the higher bits are all 0).  
-{\color{red}
 The vector is padded with the end-of-vector values if the GT having fewer ploidy.
 We note specifically that except for the end-of-vector byte, no other negative
 values are allowed in the GT array.
-}
 
 Examples:
 
@@ -1732,7 +1698,7 @@ Just for discussion, suppose instead that ALT was ALT=C,T.  The only thing that 
 
 \subsubsection{Encoding FILTER}
 
-``PASS'' is implicitly encoded as the {\color{red}first} entry in the header dictionary (see dictionary of strings).  Here we encode the PASS FILTER field as a vector of size 1 of type 8-bit, which has type byte is 0x11.  The value is the offset 0:
+``PASS'' is implicitly encoded as the first entry in the header dictionary (see dictionary of strings).  Here we encode the PASS FILTER field as a vector of size 1 of type 8-bit, which has type byte is 0x11.  The value is the offset 0:
 
 \vspace{0.3cm}
 \begin{tabular}{|l| l|} \hline
@@ -1865,7 +1831,6 @@ this will change in the near future.
 BCF2 files are expected to be indexed through the same index scheme,
 section~4 as BAM files and other block-compressed files with BGZF.
 
-{\color{red}
 \section{List of changes}
 
 \subsection{Changes between VCFv4.2 and VCFv4.3}
@@ -1902,6 +1867,5 @@ with "$<$" must have an ID field. Therefore, also \#\#PEDIGREE newly requires a 
 \item String vectors in BCF do not need to start with comma, as the number of values is indicated already in the definition of the tag in the header.
 \item The implicit filter PASS was described inconsistently throughout BCFv2.1: It is encoded as the first entry in the dictionary, not the last.
 \end{itemize}
-}
 
 \end{document}
