--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -192,7 +192,7 @@ encoding and therefore this encoding is called ITF-8 (Integer Transformation For
 
 The most significant bits of the first byte have special meaning and are called 
 `prefix'. These are 0 to 4 true bits followed by a 0. The number of 1's denote 
-the number of bytes the follow. To accommodate 32 bits such representation requires 
+the number of bytes to follow. To accommodate 32 bits such representation requires 
 5 bytes with only 4 lower bits used in the last byte 5.
 
 \item[LTF-8 long or (ltf8)]\ \newline
