Fixed lowercase z in TD example.
Fixes #112

--- a/CRAMv2.1.tex
+++ b/CRAMv2.1.tex
@@ -663,9 +663,9 @@ of tag ids.
 
 The TD is written as byte array consisting of $L_{i}$ values separated 
 with \textbackslash{}0. Each $L_{i}$ value is written as a sequence 
-of 3 bytes: tag id followed by tag value type. For example AMiOQz\textbackslash{}0OQz\textbackslash{}0, 
-where the TD consists of just two values: integer 0 for tags \{AM:i,OQ:z\} and 
-1 for tag \{OQ:z\}.
+of 3 bytes: tag id followed by tag value type. For example AMiOQZ\textbackslash{}0OQZ\textbackslash{}0, 
+where the TD consists of just two values: integer 0 for tags \{AM:i,OQ:Z\} and 
+1 for tag \{OQ:Z\}.
 
 \subsubsection*{Encoding tag values}
 
