More strict language used in section 2

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -466,7 +466,7 @@ VCF records use a simple haplotype representation for REF and ALT alleles to des
 \begin{itemize}
     \item The "L" suffix means "likelihood" as log-likelihood in the sampling
     distribution, log10 Pr(Data$|$Model).  Likelihoods are represented as log10
-    scale, so has to be negative (e.g.~GL, CNL).  The likelihood can be also
+    scale, thus they are negative numbers (e.g.~GL, CNL).  The likelihood can be also
     represented in some cases as phred-scale in a separate tag (e.g.~PL).
 
     \item The "P" suffix means "probability" as linear-scale probability in the
